<resources>
    <string name="jobs">Posts</string>
    <string name="about">About</string>
    <string name="interest">My Jobs</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="SignUp">Sign Up</string>
    <string name="submit">Submit</string>

    <string name="app_name">Job Bridge</string>
    <string name="action_search">Search</string>
    <string name="action_add">add</string>
    <string name="menu_a">func a</string>
    <string name="menu_b">func b</string>
    <string name="menu_c">func c</string>
    <string name="menu_d">func d</string>

    <string name="apply">Apply Now</string>
    <string name="search">job title, keywords, or company</string>
    <string name="searchJobs">Search</string>
    <string name="filter">Filter</string>
    <string name="filter_wage">wage starts at</string>
    <string name="update">Update</string>
    <string name="connector">\t - \t</string>
    <string name="set_reminder_time">Remind Me</string>
    <string name="confirm">Confirm</string>
    <string name="hours">Hours early</string>
    <string name="reminde_me">Remind me hour(s) before this event</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="markerShowDetail"><u>Show Detail</u></string>
    <string name="Subscribe">Subscribe Now</string>
    <string name="action_logout"> Log Out</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Unknown</item>
    </string-array>

    <string-array name="status">
        <item>Canadian Citizenship</item>
        <item>Work Permit Holder</item>
        <item>International Student</item>
    </string-array>

    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="url_topicGroups">/topicGroups</string>
    <string name="url_subscribedTopics">/jobSeekerSubscriptions?jobSeekerId=3</string>
    <string name="url_subsribeTo">/jobSeekerSubscriptions/add</string>
    <string name="url_profileUpdate">/jobSeekers/update</string>
    <string name="url_profile">/jobSeekers/3</string>
    <string name="url_jobApplicationAdd">/jobApplications/add</string>
    <string name="url_viewUpdate">/jobs/view</string>
    <string name="url_job">/jobs/</string>
    <string name="url_jobApplication">/jobapplications?jobApplicationId=</string>
    <string name="url_jobApplicationUpdate">/jobApplications/update</string>
    <string name="url_rating">/jobRatings/add</string>
    <string name="url_ratingUpdate">/jobRatings/update</string>
    <string name="url_myJobs">/jobApplications?jobSeekerId=3</string>
    <string name="url_jobsList">/jobs</string>
    <string name="url_jobTypesList">/jobTypes</string>
    <string name="url_jobRatings">/jobRatings?jobSeekerId=3</string>
    <string name="url_token">/jobSeekerTokens/add</string>

    <string name="toast_exit">Please click BACK again to exit</string>
    <string name="toast_subscribe">Successfully Subscribed!</string>
    <string name="toast_applySuccess">You have successfully applied for this job</string>
    <string name="toast_applyFail">Sorry, you failed to applied for this job. Try again later</string>
    <string name="toast_calendar">You have added this event to Google Calender</string>
    <string name="list_empty">No Data Available</string>

    <string name="userid">ID</string>
    <string name="password">PASSWORD</string>
    <string name="login">login</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading</string>

</resources>
